--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuejs-noty": "^0.1.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
